// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should contain correct values for border 1`] = `
{
  "radius": {
    "large": "12px",
    "medium": "8px",
    "small": "4px",
  },
  "width": {
    "base": "2px",
    "thin": "1px",
  },
}
`;

exports[`should contain correct values for borderRadius 1`] = `
{
  "large": "12px",
  "medium": "8px",
  "small": "4px",
}
`;

exports[`should contain correct values for borderRadiusLarge 1`] = `"12px"`;

exports[`should contain correct values for borderRadiusMedium 1`] = `"8px"`;

exports[`should contain correct values for borderRadiusSmall 1`] = `"4px"`;

exports[`should contain correct values for borderWidth 1`] = `
{
  "base": "2px",
  "thin": "1px",
}
`;

exports[`should contain correct values for borderWidthBase 1`] = `"2px"`;

exports[`should contain correct values for borderWidthThin 1`] = `"1px"`;
